# time_series_mix

./: README.md  pyproject.toml  test_air.ipynb  test_meta.ipynb
src/: data_analysis.py  data_loaders.py  fit_classical_methods.py  visualization.py
