[tool.poetry]
name = "time_series_mix"
version = "0.1.0"
description = ""
authors = ["Chiara"]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.12"
statsmodels = "^0.13.5"
matplotlib = "^3.7.1"
ipykernel = "^6.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
